Add Bootstrap-vue to the project

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,5 +1,6 @@
 @import "~Assets/css/main.scss";
 @import "~bootstrap/scss/bootstrap.scss";
+@import '~bootstrap-vue/src/index.scss';
 
 //TODO: Fix font-awesome
-// @import "~font-awesome/css/font-awesome.css";
+//@import "~font-awesome/css/font-awesome.css";
