Rename ToDo Component
-Rename ToDo component to ToDoItem in order to avoid naming confusion with the module

--- a/src/components/ToDo/ToDoList/ToDoList.html
+++ b/src/components/ToDo/ToDoList/ToDoList.html
@@ -29,5 +29,5 @@
     </button>
   </div>
 
-  <todo v-for="todo in filteredTodos" :key="todo.id" :todo="todo"></todo>
+  <to-do-item v-for="todo in filteredTodos" :key="todo.id" :todo="todo"></to-do-item>
 </div>
