--- a/src/components/kanban/KanbanCardModal/KanbanCardModal.html
+++ b/src/components/kanban/KanbanCardModal/KanbanCardModal.html
@@ -1,4 +1,7 @@
 <div>
+  <button id="myInput" data-toggle="modal" data-target="#exampleModalLong">
+    Button
+  </button>
   <div
     class="modal fade"
     id="exampleModalLong"
@@ -11,6 +14,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+
           <button
             type="button"
             class="close"
@@ -20,7 +24,10 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">...</div>
+
+        <div class="modal-body">
+          {{model}}
+        </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Close
