--- a/src/components/kanban/KanbanCard/KanbanCard.scss
+++ b/src/components/kanban/KanbanCard/KanbanCard.scss
@@ -5,3 +5,23 @@
 .color-card > .card-body {
   width: 100%;
 }
+
+.color-turquoise {
+  background-color: #1abc9c !important;
+}
+
+.color-emerald {
+  background-color: #2ecc71 !important;
+}
+
+.color-peter-river {
+  background-color: #3498db !important;
+}
+
+.color-amethyst {
+  background-color: #9b59b6 !important;
+}
+
+.color-carrot {
+  background-color: #e67e22 !important;
+}
