--- a/src/components/kanban/KanbanCardModal/KanbanCardModal.html
+++ b/src/components/kanban/KanbanCardModal/KanbanCardModal.html
@@ -1,40 +1,10 @@
-<div>
-  <button id="myInput" data-toggle="modal" data-target="#exampleModalLong">
-    Button
-  </button>
-  <div
-    class="modal fade"
-    id="exampleModalLong"
-    tabindex="-1"
-    role="dialog"
-    aria-labelledby="exampleModalLongTitle"
-    aria-hidden="false"
-  >
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-
-        <div class="modal-body">
-          {{model}}
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">
-            Close
-          </button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<div v-if="cardReady">
+  <b-popover :target="id" triggers="">
+    <template slot="title"
+      >Edit</template
+    >
+    <div @focus="">
+      <bt-color-picker @colorChanged="applyColor"></bt-color-picker>
     </div>
-  </div>
+  </b-popover>
 </div>
