--- a/src/views/DragAndDropView/DragAndDropView.html
+++ b/src/views/DragAndDropView/DragAndDropView.html
@@ -1,6 +1,6 @@
 <div>
   <div class="row flex-row flex-nowrap">
-    <div class="col-md-4">
+    <!-- <div class="col-md-4">
       <div
         class="card mb-2"
         @mouseenter="onMouseEnter"
@@ -9,20 +9,11 @@
       >
         <div class="card-header">Default containter</div>
         <div class="card-body">
-          <drag-wrapper>
             <kanban-card></kanban-card>
-          </drag-wrapper>
-          <drag-wrapper>
             <kanban-card></kanban-card>
-          </drag-wrapper>
-          <drag-wrapper>
             <kanban-card></kanban-card>
-          </drag-wrapper>
-          <drag-wrapper>
             <kanban-card></kanban-card>
-          </drag-wrapper>
-
-          <kanban-card v-drag></kanban-card>
+            <kanban-card></kanban-card>
         </div>
       </div>
       <div class="card border-primary">
@@ -33,32 +24,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="col-md-4" v-for="col in kanbanColumns">
-      <kanban-column :name="col"></kanban-column>
+      <kanban-column :pannelName="col"></kanban-column>
     </div>
-
+    
     <div class="col-md-4">
-      <div class="card ">
-        <div class="card-body bg-light">
-          <div
-            v-if="!showInputField"
-            class="btn btn-block btn-light"
-            @click="showColumnInput"
-          >
-            <div class="h3">+</div>
-          </div>
-          <b-form-input
-            v-show="showInputField"
-            ref="columnInputField"
-            type="text"
-            class="form-control"
-            v-model="columnText"
-            @keyup.enter="addColumn"
-            @blur="onBlur"
-          />
-        </div>
-      </div>
+      <kanban-add-button @valueEntered="addColumn"></kanban-add-button>
     </div>
   </div>
 </div>
